# TCN_EMA_SOC_Estimation

./: .gitignore  CITATION.cff  COMMIT_GUIDE.md  FINAL_GITHUB_RELEASE_SUMMARY.md  LICENSE_OR_TODO.md  README.md  RELEASE_CHECK_REPORT.md  RELEASE_NOTES.md  SOURCE_OF_TRUTH_MANIFEST.csv  pyproject.toml  requirements.txt  source_copy_manifest.csv
Data/: README.md  manuscript_item_inventory.md  manuscript_source_map.csv  prepare_calce_nmc.py  source_data_manifest.csv
Figures/: make_figures.ipynb
Models/: README.md  __init__.py  feature_sets.py  model_zoo.py  train.py
Scripts/: build_frequency_structure_analysis.py  common.py  figure_1.py  figure_10.py  figure_2.py  figure_3.py  figure_4.py  figure_5.py  figure_6.py  figure_7.py  figure_8.py  figure_9.py  figure_S1.py  figure_S2.py  figure_S3.py  plot_figure5_representative_fuds_trajectory.py  plot_figure7_corrected_voltage_behavior.py  plot_figure7_voltage_current_abs_current_behavior.py  table_1.py  table_10.py  table_2.py  table_3.py  table_4.py  table_5.py  table_6.py  table_7.py  table_8.py  table_9.py  table_S1.py  table_S10.py  table_S11.py  table_S2.py  table_S3.py  table_S4.py  table_S5.py  table_S6.py  table_S7.py  table_S8.py  table_S9.py
Tables/: make_tables.ipynb  table_10_region_error_reduction.csv  table_10_region_error_reduction.md  table_1_dataset_summary.csv  table_1_dataset_summary.md  table_2_voltage_current_autocorrelation.csv  table_2_voltage_current_autocorrelation.md  table_3_causal_lag_correlations.csv  table_3_causal_lag_correlations.md  table_4_vi_bin_soc_iqr.csv  table_4_vi_bin_soc_iqr.md  (+32 more)
(+202 files in other folders)
