[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g4-ema-soc-release"
version = "0.1.0"
description = "Causal EMA memory features for strict NoCC SOC estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "torch>=2.1",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["soc_decomp*"]

